# tabletop-handybot

./: .gitignore  README.md  requirements.txt  tabletop-handybot.repos
grounded_sam_ros/: package.xml  setup.cfg  setup.py
grounded_sam_ros/grounded_sam_ros/: grounded_sam_node.py  openai_assistant.py
tabletop_handybot/: package.xml  setup.cfg  setup.py
tabletop_handybot/launch/: run.launch.py
tabletop_handybot/tabletop_handybot/: audio_prompt_node.py  openai_assistant.py  point_cloud_conversion.py  tabletop_handybot_node.py
