<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>grounded_sam_ros</name>
  <version>0.1.0</version>
  <description>Example of using Grounded-SAM in ROS 2.</description>

  <license>Apache License 2.0</license>
  <maintainer email="ycheng517@gmail.com">Yifei Cheng</maintainer>
  <author email="ycheng517@gmail.com">Yifei Cheng</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- These test dependencies are optional
  Their purpose is to make sure that the code passes the linters -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>